<resources>
    <string name="app_name">ShortQuizz</string>

    <!-- Quizzes strings -->
    <string name="question1">1. Who said: \"To be or not to be\"?</string>
    <string name="question2">2. Identify this painting.</string>
    <string name="question3">3. Which countries are in Europe?</string>
    <string name="question4">4. Write the most popular mobile OS.</string>
    <string name="question5">5. What is the capital city of Romania?</string>

    <!-- Answers strings -->
    <string name="question1_answer1">Vlad the Impaler</string>
    <string name="question1_answer2">Marshall McLuhan</string>
    <string name="question1_answer3">Faust</string>
    <string name="question1_answer4">Hamlet</string>

    <string name="question2_answer1">Walt Disney - Snow White</string>
    <string name="question2_answer2"> Sandro Botticelli - Birth of Venus</string>
    <string name="question2_answer3">Leonardo Da Vinci - Mona Lisa</string>
    <string name="question2_answer4">Pablo Picasso - Les Demoiselles d\'Avignon</string>

    <string name="question3_answer1">Romania</string>
    <string name="question3_answer2">India</string>
    <string name="question3_answer3">Spain</string>
    <string name="question3_answer4">China</string>

    <string name="question4_answer">Android</string>
    <string name="question4_hint">Enter text here</string>

    <string name="question5_answer1">Bucharest</string>
    <string name="question5_answer2">Milky Way</string>
    <string name="question5_answer3">Hong Kong</string>
    <string name="question5_answer4">Machu Picchu</string>

    <string name="Submit">Submit</string>
    <string name="quizzes">Quizzes</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="start">Start</string>
    <string name="your_score">Your score is:</string>
    <string name="share">Share</string>
    <string name="scoreMessage">%1$s you have %2$d correct answers and %3$d wrong answers</string>
</resources>