<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.shortquizz.Results">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:fontFamily="@font/bangers"
        android:text= "@string/quizzes"
        style="@style/TitleText"/>

    <TextView
        android:text="@string/your_score"
        style="@style/StartText" />

    <RatingBar
        android:id="@+id/stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginBottom="@dimen/top_margin"
        android:isIndicator="true" />

    <Button
        android:text="@string/share"
        style="@style/StartText"
        android:onClick="shareResults"/>

    </LinearLayout>


</ScrollView>
