<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.shortquizz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TitleText"
            android:fontFamily="@font/bangers"
            android:text="@string/quizzes" />

        <TextView
            style="@style/StartText"
            android:text="@string/enter_your_name" />

        <EditText
            android:id="@+id/playerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/top_margin"
            android:imeOptions="actionDone"
            android:inputType="textCapWords" />

        <Button
            style="@style/StartText"
            android:onClick="startGame"
            android:text="@string/start" />

    </LinearLayout>

</ScrollView>
